fix horizontal scroll speed

--- a/src/views/Index/Incentives/Incentives.module.css
+++ b/src/views/Index/Incentives/Incentives.module.css
@@ -1,5 +1,5 @@
 .carousel {
-  height: 150vh;
+  height: 400vh;
   background-color: black;
 }
 
